# portpier

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/portpier/: __main__.py  app.py  config.py
src/portpier/data/: collector.py  models.py
src/portpier/ui/: commands.py  themes.py
src/portpier/ui/screens/: detail.py  main.py
src/portpier/ui/widgets/: header.py  help_dialog.py  kill_dialog.py  port_table.py  search_bar.py
src/portpier/utils/: format.py  inference.py  signals.py
tests/: conftest.py  test_collector.py  test_commands.py  test_config.py  test_format.py  test_inference.py  test_signals.py
