[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portpier"
version = "0.1.0"
description = "A gorgeous TUI dashboard for port and process monitoring on macOS"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "psutil>=6.0.0",
    "tomli-w>=1.1.0",
]

[project.scripts]
portpier = "portpier.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/portpier"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "types-psutil>=6.0",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ANN", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
